# elmo-api-rs

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: test.yml
scripts/gcp/: create_artifact_registry.sh  create_db.sh  create_vpc.sh  deploy_container.sh  destroy_vpc.sh
sql/: create_service_account.sql
src/: lib.rs  main.rs  routes.rs
tests/: api_tests.rs  end_to_end_tests.rs  integration_tests.rs  performance_tests.rs
