[package]
name = "elmo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.8"
dotenvy = "0.15"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = "0.1"

[dev-dependencies]
tokio-test = "0.4"
hyper = { version = "1.0", features = ["full", "http1", "http2", "client", "server"] }
tower = { version = "0.4", features = ["util"] }
bytes = "1.0"
